# ctx

./: .dedup-allowlist.txt  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SKILL.md  batch_convert.py  catalog_builder.py  context-monitor.py  ctx_config.py  inject_hooks.py  install.ps1  install.sh  link_conversions.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  skill-transformer.py  skill_add.py  usage-tracker.py  versions_catalog.py  wiki_lint.py  wiki_orchestrator.py  wiki_query.py
.claude/commands/: toolbox-init.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clean-host-contract.yml  docs.yml  publish.yml  test.yml  xdist-experiment.yml
docs/: SKILL.md  backup-hook-install.md  dashboard.md  entity-onboarding.md  huggingface-publish.md  index.md  knowledge-graph.md  llm-wiki-v2-analysis.md  marketplace-registry.md  memory-anchor.md  playbook-live-load-unload.md  playbook-random-load-unload.md  playbook-real-world.md  skill-lifecycle-and-dashboard.md  skill-quality-install.md  skills-health.md  stack-signatures.md  tank-source.md
docs/harness/: attaching-to-hosts.md  clean-host-contract.md
docs/plans/: 2026-04-27-current-next-steps-hardening.md  2026-04-28-harness-recommendations-and-entity-onboarding.md
docs/reports/: ctx-million-dollar-review-2026-04-27.md  ctx-review-2026-04-26.md
docs/roadmap/: skill-quality-scoring.md  skill-quality.md
docs/toolbox/: behavior-miner.md  configuration.md  council-runner.md  hooks.md  index.md  intent-interview.md  starters.md  verdicts.md
graph/: README.md  communities.json  dedup-report.md  graph-report.md  sample-security-filtered.html  sample-security.html  sample-top60.html  sample-top80.html  tag-backfill.json  tag-backfill.md  viz-ai-agents.html  viz-overview.html  viz-python.html  viz-security.html
hooks/: backup_on_change.py  quality_on_session_end.py
imported-skills/designdotmd/: ATTRIBUTION.md  MANIFEST.json  build_manifest.py  designs-listing.json
imported-skills/designdotmd/designs/: 3d-sculpt.md  3d-sculpt.meta.json  ai-labs.md  ai-labs.meta.json  airline-altitude.md  airline-altitude.meta.json  airport-departures.md  airport-departures.meta.json  analytics-crisp.md  analytics-crisp.meta.json  aqua-mint.md  aqua-mint.meta.json  arcade-neon-pop.md  arcade-neon-pop.meta.json  architect-blueprint.md  architect-blueprint.meta.json  arctic.md  arctic.meta.json  atelier-noir.md  atelier-noir.meta.json  bakery-flour.md  bakery-flour.meta.json  barbershop-pole.md  barbershop-pole.meta.json  battle-royale.md  battle-royale.meta.json  bauhaus.md  bauhaus.meta.json  board-game-tavern.md  board-game-tavern.meta.json  botanical-apothecary.md  botanical-apothecary.meta.json  botanical.md  botanical.meta.json  broadsheet-01.md  broadsheet-01.meta.json  brutalist-office.md  brutalist-office.meta.json  cafe-racer.md  cafe-racer.meta.json  (+267 more)
imported-skills/mattpocock/: ATTRIBUTION.md  MANIFEST.json  build_manifest.py
imported-skills/strix/: ATTRIBUTION.md  MANIFEST.json  build_manifest.py
imported-skills/strix/agent-patterns/: orchestrator-worker-pattern.md  sandboxed-tool-runtime.md  scan-mode-as-skill.md  shared-wiki-memory-pattern.md  skill-injection-pattern.md
internal/playbooks/: playbook-live-load-unload.md  playbook-random-load-unload.md  playbook-real-world.md
internal/reviews/: llm-wiki-v2-analysis.md
scripts/: audit_backup.py  ci_classifier.py  ci_no_test_policy.py  ci_required.py  clean_host_contract.py  sync_huggingface.py  tune_similarity_thresholds.py
skills/skill-router/: SKILL.md
skills/skill-router/references/: 01-scope.md  02-plan.md  03-build.md  04-check.md  05-deliver.md
src/: __init__.py  _file_lock.py  _fs_utils.py  _safe_name.py  agent_add.py  agent_install.py  agent_mirror.py  backup_config.py  backup_mirror.py  backup_retention.py  backup_watchdog.py  batch_convert.py  behavior_miner.py  bundle_orchestrator.py  catalog_builder.py  change_detector.py  config.json  context-monitor.py  context_monitor.py  corpus_cache.py  cosine_ranker.py  council_runner.py  ctx_audit_log.py  ctx_config.py  ctx_init.py  ctx_lifecycle.py  ctx_monitor.py  embedding_backend.py  flatten_agents.py  harness_add.py  harness_install.py  import_designdotmd_skills.py  import_mattpocock_skills.py  import_skills_sh_catalog.py  import_strix_skills.py  inject_hooks.py  install_utils.py  intake_gate.py  intake_pipeline.py  intent_interview.py  (+49 more)
src/ctx/: __init__.py  api.py  config.json
src/ctx/adapters/: __init__.py
src/ctx/cli/: __init__.py  recommend.py  run.py
src/ctx/core/: __init__.py  entity_types.py  entity_update.py
src/ctx/mcp_server/: __init__.py  server.py
src/ctx/utils/: __init__.py  _fs_utils.py
src/mcp_sources/: __init__.py  awesome_mcp.py  base.py  pulsemcp.py
src/sources/: __init__.py  tank_source.py
src/tests/: _wiki_helpers.py  conftest.py  test_agent_add.py  test_agent_install.py  test_alive_loop_e2e.py  test_artifact_promotion.py  test_backup_config.py  test_backup_mirror.py  test_backup_retention.py  test_backup_watchdog.py  test_batch_convert.py  test_behavior_miner.py  test_bundle_orchestrator.py  test_catalog_builder.py  test_change_detector.py  test_ci_classifier.py  test_clean_host_contract.py  test_config.py  test_context_monitor.py  test_convert_and_add.py  test_corpus_cache.py  test_cosine_ranker.py  test_council_runner.py  test_crash_consistency.py  test_ctx_audit_log.py  test_ctx_config.py  test_ctx_init.py  test_ctx_lifecycle.py  test_ctx_lifecycle_auto.py  test_ctx_monitor.py  test_ctx_monitor_3type.py  test_ctx_monitor_browser.py  test_dedup_check.py  test_embedding_backend.py  test_entity_update.py  test_entity_write_safety.py  test_flatten_agents.py  test_fs_utils.py  test_fs_utils_permissions.py  test_fuzz_yaml_rendering.py  (+98 more)
src/tests/fixtures/: awesome_mcp_excerpt.md  fake_mcp_server.py  mcp_github.json  mcp_pulsemcp.json  pulsemcp_listing_excerpt.html  (+2 more)
tests/: conftest.py  test_config_and_wiki.py
(+53 files in other folders)
