[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-ctx"
version = "0.6.4"
description = "Skill and agent recommendation system for Claude Code — knowledge graph, wiki, and intake quality gates"
authors = [{ name = "Steve Solun" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "networkx>=3,<4",
    "numpy>=1.24,<3",
    "plotly>=5,<7",
    "pyyaml>=6,<7",
]

[project.urls]
Homepage = "https://stevesolun.github.io/ctx/"
Repository = "https://github.com/stevesolun/ctx"
Documentation = "https://stevesolun.github.io/ctx/"
Changelog = "https://github.com/stevesolun/ctx/blob/main/CHANGELOG.md"

[project.scripts]
ctx-init = "ctx_init:main"
ctx-install-hooks = "inject_hooks:main"
ctx-monitor = "ctx_monitor:main"
ctx-scan-repo = "scan_repo:main"
ctx-skill-quality = "skill_quality:main"
ctx-skill-health = "skill_health:main"
ctx-toolbox = "toolbox:main"
ctx-lifecycle = "ctx_lifecycle:main"
ctx-skill-add = "skill_add:main"
ctx-skill-install = "skill_install:main"
ctx-agent-mirror = "agent_mirror:main"
ctx-agent-install = "agent_install:main"
ctx-mcp-add = "mcp_add:main"
ctx-mcp-fetch = "mcp_fetch:main"
ctx-mcp-ingest = "mcp_ingest:main"
ctx-mcp-enrich = "mcp_enrich:main"
ctx-mcp-quality = "mcp_quality:main"
ctx-mcp-rebuild-index = "mcp_rebuild_index:main"
ctx-wiki-graphify = "wiki_graphify:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.8",
    "ruff>=0.4",
]
embeddings = [
    "sentence-transformers>=2,<4",
    "torch>=2,<3",
]

[tool.setuptools]
# src/ holds ~55 flat top-level modules (scan_repo.py, skill_quality.py, …),
# not a proper package tree. `packages.find` only discovers directories with
# __init__.py, so the earlier config packaged only `tests/` and shipped a
# broken wheel. List every runtime module explicitly via py-modules and tell
# setuptools to look for them under src/.
package-dir = {"" = "src"}
py-modules = [
    "_file_lock",
    "_fs_utils",
    "agent_add",
    "agent_install",
    "agent_mirror",
    "backup_config",
    "backup_mirror",
    "backup_retention",
    "backup_watchdog",
    "batch_convert",
    "behavior_miner",
    "catalog_builder",
    "change_detector",
    "context_monitor",
    "corpus_cache",
    "cosine_ranker",
    "council_runner",
    "ctx_audit_log",
    "ctx_config",
    "ctx_init",
    "ctx_lifecycle",
    "ctx_monitor",
    "embedding_backend",
    "flatten_agents",
    "import_strix_skills",
    "inject_hooks",
    "intake_gate",
    "intake_pipeline",
    "intent_interview",
    "kpi_dashboard",
    "link_conversions",
    "mcp_add",
    "mcp_canonical_index",
    "mcp_enrich",
    "mcp_entity",
    "mcp_fetch",
    "mcp_ingest",
    "mcp_quality",
    "mcp_quality_signals",
    "mcp_rebuild_index",
    "memory_anchor",
    "quality_signals",
    "resolve_graph",
    "resolve_skills",
    "scan_repo",
    "skill_add",
    "skill_add_detector",
    "skill_category",
    "skill_health",
    "skill_install",
    "skill_loader",
    "skill_quality",
    "skill_suggest",
    "skill_telemetry",
    "skill_unload",
    "toolbox",
    "toolbox_config",
    "toolbox_hooks",
    "toolbox_verdict",
    "update_repo_stats",
    "usage_tracker",
    "versions_catalog",
    "wiki_batch_entities",
    "wiki_graphify",
    "wiki_lint",
    "wiki_orchestrator",
    "wiki_query",
    "wiki_sync",
    "wiki_utils",
    "wiki_visualize",
]
# Do NOT ship the test suite to PyPI. The previous build inadvertently
# bundled src/tests/ because it was the only directory with __init__.py.
# The ``mcp_sources`` subpackage is listed here because setuptools'
# ``py-modules`` is flat-only; subpackages need an explicit ``packages``
# entry to be installed.
packages = ["mcp_sources"]

[tool.setuptools.package-data]
"*" = ["config.json", "skill-registry.json"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
markers = [
    "integration: marks tests that require external models or network (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
